--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "server:debug": "nodemon --inspect app.js"
+    "server:debug": "nodemon --inspect app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.4.18",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
