--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+      "node": "10.15.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
