Add removal functionality to profile page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
+    "react-confirm-alert": "^2.3.0",
     "react-dom": "^16.8.4",
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.1",
