Initial metadata handling process, prefilling time

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "d3": "^5.9.1",
+    "exif-js": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
